wip: get logs
