# internal/server.go
@@ -11,7 +11,6 @@ import (
 	"github.com/labstack/echo/v4/middleware"
 	"github.com/spf13/viper"
 	echoSwagger "github.com/swaggo/echo-swagger"
-	"net/http"
 )
 
 func InitServer() {
@@ -19,9 +18,6 @@ func InitServer() {
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
 	e.Use(middleware.CORS())
-	e.GET("/health", func(c echo.Context) error {
-		return c.String(http.StatusOK, "System is up and running!")
-	})
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	health.InitController(e)
 	oa.InitController(e)
